--- a/catalog/templates/catalog/contacts.html
+++ b/catalog/templates/catalog/contacts.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-    <h5 class="my-0 mr-md-auto font-weight-normal">Skystore</h5>
+    <h10 class="my-0 mr-md-auto font-weight-normal">Market</h10>
     <nav class="ms-5">
         <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
         <a class="p-2 btn btn-outline-primary" href="/contacts/">Контакты</a>
@@ -47,21 +47,23 @@
                 <div class="card-body">
                     <form method="post" action="" class="form-floating">
                         {% csrf_token %}
+                        <br>
                         <div class="mb-3">
-                            <label for="name">Имя</label>
-                            <input type="text" name="name" class="form-control" id="name" placeholder="Ваше имя" required>
-                        </div>
+                            <label form="name">Имя</label>
+                            <br>
+                            <input type="text" name="name" class="form-control" id="name" placeholder="Ваше имя" required/><br>
                         <div class="mb-3">
-                            <label for="phone">Телефон</label>
-                            <input type="text" name="phone" class="form-control" id="phone" placeholder="Контактный телефон" required>
-                        </div>
+                            <label form="email">Email</label>
+                            <br>
+                            <input type="email" name="email" class="form-control" id="email" placeholder="Ваш email" required"/><br>
                         <div class="mb-3">
-                            <label for="message">Сообщение</label>
-                            <textarea type="text" name="message" class="form-control" id="message" placeholder="Контактный телефон" required></textarea>
+                            <label form="message">Сообщение</label>
+                            <br>
+                            <textarea name="message" class="form-control" id="message" placeholder="Ваше сообщение" required></textarea>
+                        <input type="submit" value="Отправить">
                         </div>
+
                     </form>
-                    <input type="submit">
-                    <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Отправить</button>
                 </div>
             </div>
         </div>
@@ -70,7 +72,7 @@
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
             <div class="col-12 col-md">
-                SkyStore
+                Market
                 <small class="d-block mb-3 text-muted">&copy; 2023</small>
             </div>
             <div class="col-6 col-md">
@@ -100,13 +102,6 @@
 </div>
 
 <script src="/static/js/bootstrap.bundle.min.js"></script>
-<br>
-<form method="post">
-    {% csrf_token %}
-    <input type="text" name="name"/><br>
-    <input type="email" name="email"/><br>
-    <textarea name="message"></textarea>
-    <input type="submit" value="Отправить">
-</form>
+
 </body>
 </html>
