--- a/catalog/templates/catalog/catalog.html
+++ b/catalog/templates/catalog/catalog.html
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="row">
     {% for object in object_list %}
-      {% include 'catalog/includes/inc_catalog.html' with object=object %}
+      {% include 'catalog/includes/inc_catalog.html' %}
     {% endfor %}
   </div>
 {% endblock %}
