--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -5,16 +5,24 @@
     {% for object in object_list %}
       <div class="col-md-4">
         <div class="card mb-4 box-shadow">
+          {% if object.picture %}
           <img class="card-img-top"
                src="{{ object.picture|my_media }}"
                alt="Card image cap">
+          {% else %}
+            <img src="/media/products/logo.jpg"/>
+          {% endif %}
           <div class="card-body">
             <p class="card-text">{{ object.name }}</p>
             <p class="card-text">{{ object.description }}</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                <a href="{% url 'catalog:product_view' object.pk %}"
+                   class="btn btn-sm btn-outline-secondary">Посмотреть</a>
+                <a href="{% url 'catalog:product_update' object.pk %}"
+                   class="btn btn-sm btn-outline-secondary">Редактировать</a>
+                <a href="{% url 'catalog:product_delete' object.pk %}"
+                   class="btn btn-sm btn-outline-danger">Удалить</a>
               </div>
             </div>
           </div>
