--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -18,6 +18,7 @@
       <div class="collapse bg-dark" id="navbarHeader">
         <div class="container">
           <div class="row">
+              <img src="/media/products/logo.jpg" height="100"/>
             <div class="col-sm-8 col-md-7 py-4">
               <h4 class="text-white">Bakery Market</h4>
               <p class="text-muted">Не отказывайте себе в удовольствии.</p>
@@ -28,6 +29,7 @@
                 <li><a href="{% url 'catalog:main_page' %}" class="text-white">Главная</a></li>
                 <li><a href="{% url 'catalog:categories' %}" class="text-white">Каталог</a></li>
                 <li><a href="{% url 'catalog:contacts' %}" class="text-white">Контакты</a></li>
+                <li><a href="{% url 'blog:list' %}" class="text-white">Блог</a></li>
               </ul>
             </div>
           </div>
@@ -65,7 +67,6 @@
       </div>
 
     </main>
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
