--- a/catalog/templates/catalog/includes/inc_catalog.html
+++ b/catalog/templates/catalog/includes/inc_catalog.html
@@ -5,7 +5,7 @@
       <p class="card-text">{{ object.name }}</p>
       <div class="d-flex justify-content-between align-items-center">
         <div class="btn-group">
-          <a href="{% url 'catalog:catalog_product' object.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Посмотреть</a>
+          <a href="{% url 'catalog:products' object.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Посмотреть</a>
         </div>
       </div>
     </div>
