--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -23,6 +23,11 @@
                         <a href="{% url 'blog:delete' object.pk %}" type="button"
                            class="btn btn-sm btn-outline-danger">Удалить</a>
                     </div>
+                    {% if object.is_publish %}
+                        <a class="btn btn-warning" href="{% url 'blog:toggle_activity' object.pk %}">Деактивировать</a>
+                    {% else %}
+                        <a class="btn btn-success" href="{% url 'blog:toggle_activity' object.pk %}">Активировать</a>
+                    {% endif %}
                   </div>
                 </div>
               </div>
