--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -1,28 +1,44 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
-    <form method="post"  class="row">
+
+<div class="col-12">
+    <form method="post" class="row" enctype="multipart/form-data">
         <div class="col-6">
             <div class="card">
                 <div class="card-header">
-                    {% if object %}
+                    <h3 class="card-title">
                         Редактирование продукта
-                    {% else %}
-                        Добавление продукта
-                    {% endif %}
+                    </h3>
                 </div>
                 <div class="card-body">
                     {% csrf_token %}
                     {{ form.as_p }}
-                    <button type="submit" class="btn btn-outline-success">
-                        {% if object %}
-                            Сохранить
-                        {% else %}
-                            Добавить
-                        {% endif %}
-                    </button>
+                    <button type="submit" class="btn btn-outline-success">Сохранить</button>
                 </div>
+                <div class="card-footer"></div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title">
+                        Версии продукта
+                    </h3>
+                </div>
+                <div class="card-body">
+                    {{ formset.management_form }}
+                    {% for form in formset.forms %}
+                        {{ form.as_p }}
+                        {% if not forloop.last %}
+                            <hr>
+                        {% endif %}
+                    {% endfor %}
+                    <button type="submit" class="btn btn-outline-success">Сохранить</button>
+                </div>
+                <div class="card-footer"></div>
             </div>
         </div>
     </form>
+</div>
 {% endblock %}
