--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -8,7 +8,7 @@
             <div class="card">
                 <div class="card-header">
                     <h3 class="card-title">
-                        Редактирование продукта
+                        Редактирование/создание продукта
                     </h3>
                 </div>
                 <div class="card-body">
@@ -30,9 +30,6 @@
                     {{ formset.management_form }}
                     {% for form in formset.forms %}
                         {{ form.as_p }}
-                        {% if not forloop.last %}
-                            <hr>
-                        {% endif %}
                     {% endfor %}
                     <button type="submit" class="btn btn-outline-success">Сохранить</button>
                 </div>
