--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -24,39 +24,32 @@
                         </tr>
                         <tr>
                             <td>Цена</td>
-                            <td>{{ object.price }}</td>
+                            <td>{{ object.price }} руб.</td>
                         </tr>
                     </table>
                 </div>
-                <div class="card-header">
-                    <h3 class="card-title">
-                        Информация о версии товара
-                    </h3>
-                </div>
-                <div class="card-body">
                     <table class="table">
-                        <tr>
-                            <td>Название версии</td>
-                            <td>{{ object.version_name }}</td>
-                        </tr>
-                        <tr>
-                            <td>Номер версии</td>
-                            <td>{{ object.version_number }}</td>
-                        </tr>
-                        <tr>
-                            <td>Признак текущей версии</td>
-                            <td>{{ object.is_active }}</td>
-                        </tr>
+                        {% if version %}
+                        <small class="d-block mb-3 text-muted">Актуальная версия:
+                            <!--uncomment cycle and separator if more than one actual version available-->
+                            <!--{% for v in version %}-->
+                            {{ v.version_number }}
+                            {% if v.version_name %}
+                            &laquo;{{ v.version_name }}&raquo;
+                            {% endif %}
+                            <!--{% if not forloop.last %}|{% endif %}-->
+                            <!--{% endfor %}-->
+                        </small>
+                        {% endif %}
                     </table>
                 </div>
             </div>
-        </div>
         <div class="col-6">
-            {% if object.picture %}
-            <img src="/media/{{ object.picture }}" />
-            {% else %}
-            <img src="/media/products/Лйам.jpg" />
-            {% endif %}
+        {% if object.picture %}
+        <img src="/media/{{ object.picture }}" width="400" height="400" />
+        {% else %}
+        <img src="/media/products/logo.jpg" width="400" height="200" />
+        {% endif %}
         </div>
     </div>
 </div>
