--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -7,7 +7,7 @@
         <div class="card mb-4 box-shadow">
           {% if object.picture %}
           <img class="card-img-top"
-               src="{{ object.picture|my_media }}"
+               src="{{ object.picture|my_media }}" width="300" height="300"
                alt="Card image cap">
           {% else %}
             <img src="/media/products/logo.jpg"/>
