--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -15,6 +15,7 @@
           <div class="card-body">
             <p class="card-text">{{ object.name }}</p>
             <p class="card-text">{{ object.description }}</p>
+            <p class="card-text">{{ object.owner|default:"Без автора" }}</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
                 <a href="{% url 'catalog:product_view' object.pk %}"
