--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -19,6 +19,7 @@
                 <div class="card-footer"></div>
             </div>
         </div>
+    {% if perms.catalog.change_version %}
         <div class="col-6">
             <div class="card">
                 <div class="card-header">
@@ -36,6 +37,7 @@
                 <div class="card-footer"></div>
             </div>
         </div>
+    {% endif %}
     </form>
 </div>
 {% endblock %}
